--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Portfolio - Nick Lauer</title>
   <!-- Favicon -->
   <link rel="icon" href="images/logo.png" type="image/png">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-90WXD2WPR8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-90WXD2WPR8');
+  </script>
 </head>
 <body>
   <!-- Header with Logo and Navigation (Index Page only) -->
