--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Nick Lauer's Portfolio showcasing web development projects in Java, Swift, SQL, C++, IoT, and more.">
+  <meta name="keywords" content="Nick Lauer, Portfolio, Web Development, Java, Swift, SQL, C++, IoT">
+  <meta name="author" content="Nick Lauer">
   <title>About Nick - Portfolio</title>
   <!-- Favicon -->
   <link rel="icon" href="images/logo.png" type="image/png">
