--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Nick Lauer's Portfolio showcasing web development projects in Java, Swift, SQL, C++, IoT, and more.">
+  <meta name="keywords" content="Nick Lauer, Portfolio, Web Development, Java, Swift, SQL, C++, IoT">
+  <meta name="author" content="Nick Lauer">
   <title>Nick Lauer - Skills</title>
   <!-- Favicon -->
   <link rel="icon" href="images/logo.png" type="image/png"/>
