--- a/CPP.html
+++ b/CPP.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nick Lauer">
   <title>C++ Projects - Portfolio</title>
   <!-- Favicon -->
-  <link rel="icon" href="images/logo.png" type="image/png"/>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-90WXD2WPR8"></script>
   <script>
