--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
   <title>Nick Lauer - Portfolio</title>
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+  <!-- Link to Stylesheet -->
+  <link rel="stylesheet" href="styles.css">
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-90WXD2WPR8"></script>
   <script>
@@ -25,11 +29,13 @@
   <header>
     <div class="logo-container">
       <a href="index.html">
-        <img src="images/logo.png" alt="Site Logo"/>
+        <img src="images/logo.png" alt="Site Logo">
       </a>
-      <img src="images/HeaderEllipse.png" alt="Logo Ellipse Image"/>
+      <img src="images/HeaderEllipse.png" alt="Logo Ellipse Image">&nbsp;
       <span class="site-name">Nick Lauer</span>
     </div>
+    <!-- Mobile Menu Toggle -->
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
     <nav>
       <ul>
         <li><a href="about.html">About me</a></li>
@@ -43,7 +49,7 @@
   <!-- Main Content -->
   <main class="portfolio-page">
     <h1>Projects</h1>
-    <p>Browse by category below</p>
+    <p class="browse-text">Browse by category below</p>
     <div class="project-buttons">
       <a href="Java.html">Java</a>
       <a href="Swift.html">Swift</a>
@@ -51,22 +57,32 @@
       <a href="SQL.html">SQL</a>
       <a href="IoT.html">IoT</a>
     </div>
-  </main>
+  </main>  
 
   <!-- Footer -->
   <footer>
     <p>Copyright © 2025 Nick Lauer</p>
-    
-    <!-- Contact Buttons -->
-    <a href="mailto:reverb_eight.3c@icloud.com">
-      <img src="images/email-button.png" alt="Email Button"/>
-    </a>
-    <a href="https://github.com/nlauer07" target="_blank">
-      <img src="images/github-button.png" alt="GitHub Button"/>
-    </a>
-    <a href="https://www.linkedin.com/in/nick-lauer-343554234" target="_blank">
-      <img src="images/linkedin-button.png" alt="LinkedIn Button"/>
-    </a>
-  </footer>
+    <div class="social-links">
+      <a href="mailto:reverb_eight.3c@icloud.com" class="email-icon">
+        <img src="images/email-button.png" alt="Email Button">
+      </a>
+      <a href="https://github.com/nlauer07" target="_blank">
+        <img src="images/github-button.png" alt="GitHub Button">
+      </a>
+      <a href="https://www.linkedin.com/in/nick-lauer-343554234" target="_blank">
+        <img src="images/linkedin-button.png" alt="LinkedIn Button">
+      </a>
+    </div>
+  </footer> 
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const menuToggle = document.querySelector('.menu-toggle');
+      const nav = document.querySelector('nav');
+      menuToggle.addEventListener('click', function() {
+        nav.classList.toggle('open');
+      });
+    });
+  </script>
 </body>
 </html>
