--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
           method: 'POST',
           headers: {
             'apikey': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iZmF4cWdoZnF0Znlud3pxaXlrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU3MDg5MzMsImV4cCI6MjA2MTI4NDkzM30.wMpzXf5blv8PGYkiKRoVYALtcORMaWo7HfGZ_I8eA5M',
-            'Authorization': 'Bearer your-anon-public-key',
+            'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iZmF4cWdoZnF0Znlud3pxaXlrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU3MDg5MzMsImV4cCI6MjA2MTI4NDkzM30.wMpzXf5blv8PGYkiKRoVYALtcORMaWo7HfGZ_I8eA5M',
             'Content-Type': 'application/json',
             'Prefer': 'return=representation'
           },
