--- a/contact.html
+++ b/contact.html
@@ -115,12 +115,33 @@
 
       const form = document.getElementById('contactForm');
       const formData = new FormData(form);
-      const name = formData.get('name');
-      const email = formData.get('email');
-      const phone = formData.get('phone');
-      const message = formData.get('message');
 
-      const payload = { name, email, phone, message };
+      const name = formData.get('name').trim();
+      const email = formData.get('email').trim();
+      const phone = formData.get('phone')?.trim() || null;
+      const message = formData.get('message').trim();
+
+      if (!name || !email || !message) {
+        alert('Please fill out all required fields.');
+        return;
+      }
+
+      // Get user IP and Country for effective spam prevention
+      let sender_ip = null;
+      let country = null;
+
+      try {
+        const ipResponse = await fetch('https://ipapi.co/json/');
+        const ipData = await ipResponse.json();
+        sender_ip = ipData.ip;
+        country = ipData.country_code; // Example: 'US'
+      } catch (err) {
+        console.warn('Could not fetch IP or country:', err);
+        sender_ip = null;
+        country = null;
+      }
+
+      const payload = { name, email, phone, message, sender_ip, country };
 
       try {
         const response = await fetch('https://nbfaxqghfqtfynwzqiyk.supabase.co/rest/v1/contacts', {
@@ -132,20 +153,23 @@
             'Prefer': 'return=representation'
           },
           body: JSON.stringify(payload)
-        });
+    });
 
-        if (response.ok) {
-          alert('Thank you for contacting me!');
-          form.reset();
-        } else {
-          alert('Sorry, something went wrong.');
-          console.error(await response.text());
-        }
-      } catch (error) {
-        console.error(error);
-        alert('There was an error submitting the form.');
-      }
+    const result = await response.json();
+
+    if (response.ok) {
+      console.log('Success:', result);
+      alert('Thank you for contacting me!');
+      form.reset();
+    } else {
+      console.error('Supabase Error:', result);
+      alert('Sorry, something went wrong. Please try again later.');
     }
+  } catch (error) {
+    console.error('Network Error:', error);
+    alert('There was an error submitting the form.');
+  }
+}
   </script>
 </body>
 </html>
