--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
             'apikey': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iZmF4cWdoZnF0Znlud3pxaXlrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU3MDg5MzMsImV4cCI6MjA2MTI4NDkzM30.wMpzXf5blv8PGYkiKRoVYALtcORMaWo7HfGZ_I8eA5M',
             'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iZmF4cWdoZnF0Znlud3pxaXlrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU3MDg5MzMsImV4cCI6MjA2MTI4NDkzM30.wMpzXf5blv8PGYkiKRoVYALtcORMaWo7HfGZ_I8eA5M',
             'Content-Type': 'application/json',
-            'Prefer': 'return=representation'
+            'Prefer': 'return=minimal'
           },
           body: JSON.stringify(payload)
     });
@@ -159,7 +159,7 @@
 
     if (response.ok) {
       console.log('Success:', result);
-      alert('Thank you for contacting me!');
+      alert('Response recorded. Thank you!');
       form.reset();
     } else {
       console.error('Supabase Error:', result);
