--- a/about.html
+++ b/about.html
@@ -1,159 +1,181 @@
-<!-- Written by Nick Lauer -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nick Lauer's Portfolio showcasing web development projects in Java, Swift, SQL, C++, IoT, and more.">
-  <meta name="keywords" content="Nick Lauer, Portfolio, Web Development, Java, Swift, SQL, C++, IoT">
-  <meta name="author" content="Nick Lauer">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Nick Lauer's Portfolio showcasing web development projects." />
+  <meta name="keywords" content="Nick Lauer, Portfolio, Web Development, Java, Swift, SQL, C++, IoT" />
+  <meta name="author" content="Nick Lauer" />
   <title>About Nick - Portfolio</title>
+
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <!-- Link to Stylesheet -->
-  <link rel="stylesheet" href="styles.css">
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-90WXD2WPR8"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-90WXD2WPR8');
-  </script>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+
+  <!-- Your main stylesheet -->
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Swiper.js CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
+
 <body>
-  <!-- Header with Logo and Navigation -->
+  <!-- Header -->
   <header>
     <div class="logo-container">
       <a href="index.html">
-        <img src="images/logo.png" alt="Site Logo">
+        <img src="images/logo.png" alt="Site Logo" />
       </a>
-      <img src="images/HeaderEllipse.png" alt="Logo Ellipse Image">&nbsp;
+      <img src="images/HeaderEllipse.png" alt="Logo Ellipse Image" />
       <span class="site-name">Nick Lauer</span>
     </div>
-  <!-- Mobile Menu Toggle (visible only on small screens) -->
-  <button class="menu-toggle" aria-label="Toggle menu">☰</button>
-  <nav>
-    <ul>
-      <li><a href="about.html">About me</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact me</a></li>
-    </ul>
-  </nav>
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+    <nav>
+      <ul>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact me</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Main Content -->
   <main class="about-page">
-    <!-- Hero-like section with gradient background and corner radius -->
-    <section class="hero-gradient">
+    
+    <!-- Hero Section -->
+    <section class="panel hero-section">
+      <div class="hero-content">
       <h1 class="about-heading">So, who am I?</h1>
       <p class="intro-paragraph">
-        I'm a technology student driven for solving complex problems 
-        and creating meaningful solutions. My goal is to work at the intersection 
-        of technology and business, helping teams navigate challenges and turn 
-        innovative ideas into impactful results. Whether it's improving processes, 
-        enhancing systems, or building connections, I'm eager to contribute to 
-        projects that make a difference.
+        I'm a technology student driven to solve complex problems and create meaningful solutions. 
+        My goal is to work at the intersection of technology and business, helping teams navigate challenges 
+        and turn innovative ideas into impactful results. Whether it's improving processes, enhancing systems, 
+        or building connections, I'm eager to contribute to projects that make a difference.
       </p>
+      </div>
     </section>
 
-    <!-- Education Section Heading -->
-    <h2>Education</h2>
+    <!-- Education Slider Section -->
+    <section class="education-slider-section">
+      <h2 class="education-heading">Education</h2>
+      <div class="swiper">
+        <div class="swiper-wrapper">
 
-    <!-- Bachelor of Science Block -->
-    <div class="education-block">
-      <h3 class="education-degree">Bachelor of Science, Integrated Information Technology</h3>
-      <div class="education-details">
-         <span class="education-institution">University of South Carolina - Columbia</span>
-         <span class="education-dates">2022-2026</span>
-      </div>
-    </div>
-    <div class="education-program-overview">
-      <h4 class="overview-title">Program Overview</h4>
-      <div class="overview-grid">
-        <div>Database Management Systems</div>
-        <div>Network Management</div>
-        <div>Cybersecurity Principles</div>
-        <div>Project Management for IT</div>
-        <div>Systems Analysis and Design</div>
-        <div>Agile Project Development</div>
-        <div>Business Law and Contracts</div>
-        <div>Programming and Development</div>
-      </div>
-    </div>
+          <!-- Slide 1: Bachelor of Science -->
+          <div class="swiper-slide">
+            <div class="education-block">
+              <h3 class="education-degree">Bachelor of Science, Integrated Information Technology</h3>
+              <div class="education-details">
+                <span class="education-institution">University of South Carolina – Columbia</span>
+                <span class="education-dates">2022–2026</span>
+              </div>
+            </div>
+            <div class="education-program-overview">
+              <h4 class="overview-title">Program Overview</h4>
+              <div class="overview-grid">
+                <div>Database Management Systems</div>
+                <div>Network Management</div>
+                <div>Cybersecurity Principles</div>
+                <div>Project Management for IT</div>
+                <div>Systems Analysis and Design</div>
+                <div>Agile Project Development</div>
+                <div>Business Law and Contracts</div>
+                <div>Programming and Development</div>
+              </div>
+            </div>
+          </div>
 
-    <!-- Certificate Block -->
-    <div class="education-block">
-      <h3 class="education-degree">Certificate, Management Information Systems</h3>
-      <div class="education-details">
-         <span class="education-institution">University of Maryland Global Campus</span>
-         <span class="education-dates">2024 - 2025</span>
-      </div>
-    </div>
-    <div class="education-program-overview">
-      <h4 class="overview-title">Program Overview</h4>
-      <div class="overview-grid">
-        <div>Cybersecurity for Leaders and Managers</div>
-        <div>Information Systems in Organizations</div>
-        <div>Foundations of Management Info Systems</div>
-        <div>Software and Hardware Infrastructure</div>
-        <div>Telecommunications in Info Systems</div>
-        <div>Business Intelligence and Data Analytics</div>
-      </div>
-    </div>
+          <!-- Slide 2: Certificate -->
+          <div class="swiper-slide">
+            <div class="education-block">
+              <h3 class="education-degree">Certificate, Management Information Systems</h3>
+              <div class="education-details">
+                <span class="education-institution">University of Maryland Global Campus</span>
+                <span class="education-dates">2024–2025</span>
+              </div>
+            </div>
+            <div class="education-program-overview">
+              <h4 class="overview-title">Program Overview</h4>
+              <div class="overview-grid">
+                <div>Cybersecurity for Leaders and Managers</div>
+                <div>Information Systems in Organizations</div>
+                <div>Foundations of Management Info Systems</div>
+                <div>Software and Hardware Infrastructure</div>
+                <div>Telecommunications in Info Systems</div>
+                <div>Business Intelligence and Data Analytics</div>
+              </div>
+            </div>
+          </div>
 
-    <!-- Data Privacy Block -->
-    <div class="education-block">
-      <h3 class="education-degree">Data Privacy and Technology</h3>
-      <div class="education-details">
-         <span class="education-institution">Harvard Online</span>
-         <span class="education-dates">In progress</span>
+          <!-- Slide 3: Data Privacy -->
+          <div class="swiper-slide">
+            <div class="education-block">
+              <h3 class="education-degree">Data Privacy and Technology</h3>
+              <div class="education-details">
+                <span class="education-institution">Harvard Online</span>
+                <span class="education-dates">In progress</span>
+              </div>
+            </div>
+            <div class="education-program-overview">
+              <h4 class="overview-title">Program Overview</h4>
+              <p class="overview-paragraph">
+                Covers data collection, surveillance, and the ethical implications of personal information in modern society.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button type="button" class="resume-button">Download Resume</button>
+        <!-- Navigation arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
       </div>
-    </div>
-    <div class="education-program-overview">
-      <h4 class="overview-title">Program Overview</h4>
-      <p class="overview-paragraph">
-        Covers data collection, surveillance, and the ethical implications of personal information in modern society.
-      </p>
-    </div>
-
-    <!-- Download Resume Button -->
-    <button type="button" class="resume-button">Download Resume</button>
+    </section>
   </main>
+    <!-- Footer -->
+    <section class="panel footer-panel">
+      <footer>
+        <p>Copyright © 2025 Nick Lauer</p>
+        <div class="social-links">
+          <a href="mailto:reverb_eight.3c@icloud.com" class="email-icon">
+            <img src="images/email-button.png" alt="Email Button" />
+          </a>
+          <a href="https://github.com/nlauer07" target="_blank">
+            <img src="images/github-button.png" alt="GitHub Button" />
+          </a>
+          <a href="https://www.linkedin.com/in/nick-lauer-343554234" target="_blank">
+            <img src="images/linkedin-button.png" alt="LinkedIn Button" />
+          </a>
+        </div>
+      </footer>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>Copyright © 2025 Nick Lauer</p>
-    <div class="social-links">
-      <a href="mailto:reverb_eight.3c@icloud.com" class="email-icon">
-        <img src="images/email-button.png" alt="Email Button">
-      </a>
-      <a href="https://github.com/nlauer07" target="_blank">
-        <img src="images/github-button.png" alt="GitHub Button">
-      </a>
-      <a href="https://www.linkedin.com/in/nick-lauer-343554234" target="_blank">
-        <img src="images/linkedin-button.png" alt="LinkedIn Button">
-      </a>
-    </div>
-  </footer>  
 
+
+  <!-- Swiper.js Script -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    const swiper = new Swiper('.swiper', {
+      direction: 'horizontal',
+      loop: false,
+      spaceBetween: 30,
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      slidesPerView: 1,
+      centeredSlides: true,
+    });
+  </script>
+
+  <!-- Menu toggle script -->
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      // Toggle mobile menu
       const menuToggle = document.querySelector('.menu-toggle');
       const nav = document.querySelector('nav');
-      menuToggle.addEventListener('click', function() {
-        nav.classList.toggle('open');
+      menuToggle.addEventListener('click', () => nav.classList.toggle('open'));
+      document.querySelector('.resume-button')?.addEventListener('click', () => {
+        window.open('PDFs/resume-current.pdf', '_blank');
       });
-  
-      // Resume button click event: Opens the PDF in a new tab
-      const resumeButton = document.querySelector('.resume-button');
-      if (resumeButton) {
-        resumeButton.addEventListener('click', function() {
-          window.open('PDFs/resume-current.pdf', '_blank');
-        });
-      }
     });
   </script>
 </body>
