--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 
       <br><br>
 
-      <button class="resume-button">Submit</button>
+      <button class="form-button">Submit</button>
     </form>
 
     <div class="contact-note">
